[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyqtauthentication"
authors = [{name = "michaeldcanady"}]
readme = "Readme.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">3.8.0"

dependencies = [
    "Markdown==3.4.1",
    "PyQt6==6.3.1",
    "PyQt6-Qt6==6.3.1",
    "PyQt6-sip==13.4.0",
]

[project.urls]
homepage = "https://github.com/michaeldcanady/pyqtauthentication#readme"
repository = "https://github.com/michaeldcanady/pyqtauthentication"

[tool.flit.module]
name = "pyqtauthentication"

[tool.mypy]
warn_unused_configs = true
files = "pyqtauthentication"
ignore_missing_imports = true

[tool.yapf]
based_on_style = "pep8"
dedent_closing_brackets = true
each_dict_entry_on_separate_line = true
column_limit = 100

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]